--- a/static/css/sample-app.css
+++ b/static/css/sample-app.css
@@ -1,3 +1,24 @@
 .jumbotron {
   margin-top: 1em;  // add a little space
 }
+.red-text{
+color:red;
+}
+
+.image1{
+    width: 400px;
+}
+
+.image2{
+    width: 200px;
+    float: right;
+}
+
+.image3{
+    width: 600px;
+    margin-top: 10px;
+}
+
+.main-title{
+text-shadow: 4px 4px 3px rgba(150, 150, 150, 1)
+}
